# api_bank

./: .gitignore  README.md  alembic.ini  manager.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 099a59a021bb_add_field_password.py  4ad24bd62f90_fix_eliminated_fiel.py  69126b3d7378_add_add_field_created_at.py  a738d9921f90_initial.py  d9a2b2556ce8_add_field_password.py  f00380b94540_add_add_field_created_at.py
src/: main.py  routes.py
src/auth/: controller.py  schemas.py  services.py
src/configs/: database.py  settings.py
src/contrib/: dependecies.py  models.py  schemas.py
src/contrib/auth/: auth.py
src/contrib/repository/: models.py
src/users/: controller.py  models.py  schemas.py
