[project]
name = "api-bank"
version = "0.1.0"
description = ""
authors = [
    {name = "zumpchiat",email = "zumpchiat@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "fastapi[standard] (>=0.122.0,<0.123.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
